--- a/css/about.scss
+++ b/css/about.scss
@@ -11,11 +11,6 @@ $GaiaGrey: #2C2C2C;
 
 //////////Mobile Version/////////
 @media only screen and (max-width: 499px){
-
-}
-
-///////////////Desktop Version////////////// 
-@media only screen and (min-width: 500px){
     .about-splash{
         position:absolute;
         background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1743114190/Splash_vxrjzl_ydbh4j.png");
@@ -364,6 +359,405 @@ $GaiaGrey: #2C2C2C;
                     transition: 1s all ease;
                     border-bottom:3px solid $GaiaDarkGreen;
             }
+        }
+        }
+    }
+}
+
+///////////////Desktop Version////////////// 
+@media only screen and (min-width: 500px){
+    .about-splash{
+        position:absolute;
+        background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1743114190/Splash_vxrjzl_ydbh4j.png");
+        left:0px;
+        top:12vh;
+        width:100vw;
+        height:80vh;
+        display:flex;
+        justify-content: center;
+        align-content: center;
+        z-index:95;
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+        .about-splash-items{
+            display:flex;
+            flex-direction: column;
+            position: absolute;
+            right: 10vw;
+            top:50vh;
+            margin:0;
+            z-index:99;
+            width:35vw;
+
+            .large-title{
+                font-family: 'Aref Ruqaa', serif;
+                text-transform: uppercase;
+                color: $GaiaLightGreen;
+                font-weight: 700;
+                font-size: 4vw;
+                text-align: center;
+                margin:0;
+                line-height: 80%;
+                z-index:99;
+                text-shadow: 3px 4px 7px rgba(32, 32, 32, 0.8);
+            }
+        }
+    }
+
+    .about-content{
+        position: relative;
+        padding-top:95vh;
+        width: 100vw;
+        display: grid;
+        grid-template-columns: 1fr;
+        z-index:1;
+        background-color: #F1ECE8;
+        
+        .about-content-grid{
+            display: grid;
+            width: 70vw;
+            grid-template-columns: 1fr;
+            align-self: center;
+            justify-self: center;
+            margin-bottom: 10vh;
+
+            .about-content-item{
+                width:100%;
+                z-index: 99;
+            }
+        
+            #aboutpg-item1{
+                display:grid;
+                grid-template-columns: 1fr;
+                align-content: center;
+                justify-items: center;
+                
+                .aboutpg1container1{
+                    display:flex;
+                    flex-direction: column;
+                    background-color: white;
+                    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+                    align-items: center;
+                    justify-content: center;
+                    width:100%;
+                    height:100%;
+                    padding-top:2vw;
+        
+                    h2{
+                        color: $GaiaDarkGreen;
+                        font-family: "Roboto";
+                        font-weight: 900;
+                        font-size: 3vw;
+                        text-align: center;
+                        font-variant: all-small-caps;
+                        height: 12vh;
+                        width:15vw;
+                        padding-top: 3vh;
+                        margin: 0;
+                        transition: 1s all ease;
+                        border-bottom:3px solid $GaiaDarkGreen;
+                    }
+                    p{
+                        text-align: center;
+                        color:$GaiaGrey;
+                        font-family: 'Roboto';
+                        font-weight: 300;
+                        font-size: 1vw;
+                        line-height: 140%; 
+                        text-align: left;
+                        width:60%;
+                        height:70%;
+                        word-wrap: break-word;
+                        margin:0;
+                        padding-top: 3vw;
+                        padding-bottom: 6vw;
+                    }
+                    #about-img-grid{
+                        display:grid;
+                        grid-template-columns: 1fr;
+                        width: 80%;
+                        .about-img-row{
+                            display: flex;
+                            flex-direction: row;
+                            width:100%;
+                            height:40vh;
+                            margin-bottom: 1vw;;
+                            #about-img1{
+                                height: 100%;
+                                width: 33%;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                margin:.5vw;
+                                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738574/Anthony_snag_at5ab2.jpg");
+                                background-position: center;
+                            }
+                            #about-img2{
+                                height: 100%;
+                                width: 33%;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                margin:.5vw;
+                                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738573/Snags_ogswkk.jpg");
+                                background-position: center; 
+                            }
+                            #about-img3{
+                                height: 100%;
+                                width: 33%;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                margin:.5vw;
+                                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738572/dogs_in_truck_ahokbb.png");
+                                background-position: center; 
+                            }
+                            #about-img4{
+                                height: 100%;
+                                width: 33%;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                margin:.5vw;
+                                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738570/arborist2_yhdtlw.jpg");
+                                background-position: center; 
+                            }
+                            #about-img5{
+                                height: 100%;
+                                width: 33%;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                margin:.5vw;
+                                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166937/arborist1_a7j9lz.jpg");
+                                background-position: center; 
+                            }
+                            #about-img6{
+                                height: 100%;
+                                width: 33%;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                margin:.5vw;
+                                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742738569/Anthony_Pruning_mobile_ukpi7l.png");
+                                background-position: center; 
+                            }
+                        } 
+                    }
+                }
+                .aboutpg1container2{
+                    display:flex;
+                    flex-direction: row;
+                    background-color: white;
+                    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+                    align-items: center;
+                    justify-content: center;
+                    width:100%;
+                    height:50vh;
+                    margin-top:1vw;
+        
+                    img{
+                        height:100%;
+                    }
+                    p{
+                        text-align: left;
+                        color:$GaiaGrey;
+                        font-family: 'Roboto';
+                        font-weight: 300;
+                        font-size: 1vw;
+                        line-height: 140%; 
+                        width:55%;
+                        height:100%;
+                        word-wrap: break-word;
+                        margin:0;
+                        padding:10%;
+                    }
+                }
+            }
+            #aboutpg-item2{
+                background-image: url("https://res.cloudinary.com/dr3r301ht/image/upload/v1742166649/Bg1_bgnkif.jpg");
+                background-repeat: no-repeat;
+                background-size: cover;
+                box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+                display:grid;
+                grid-template-columns: 1fr;
+                align-content: center;
+                justify-items: center;
+                height:90vh;
+                margin-top:1vw;
+
+                #ethosbox{
+                    padding:2vw;
+                    background-color: white;
+                    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+                    display:grid;
+                    grid-template-columns: 1fr;
+                    align-content: center;
+                    justify-items: center;
+                    h2{
+                        color: $GaiaDarkGreen;
+                        font-family: "Roboto";
+                        font-weight: 900;
+                        font-size: 3vw;
+                        text-align: center;
+                        font-variant: all-small-caps;
+                        height: 12vh;
+                        width:18vw;
+                        padding-top: 3vh;
+                        margin: 0;
+                        transition: 1s all ease;
+                        border-bottom:3px solid $GaiaDarkGreen;
+                    }
+                    p{
+                        text-align: center;
+                        color:$GaiaGrey;
+                        font-family: 'Roboto';
+                        font-weight: 300;
+                        font-size: 1vw;
+                        line-height: 140%; 
+                        text-align: left;
+                        width:60%;
+                        height:70%;
+                        word-wrap: break-word;
+                        margin:0;
+                        padding-top: 3vw;
+                        padding-bottom: 6vw;
+                    }
+                }
+                
+            }
+            #aboutpg-item3{
+                background-color: white;
+                box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+                display:grid;
+                grid-template-columns: 1fr;
+                align-content: center;
+                justify-items: center;
+                margin-top: 1vw;
+        
+                h2{
+                    color: $GaiaDarkGreen;
+                    font-family: "Roboto";
+                    font-weight: 900;
+                    font-size: 3vw;
+                    text-align: center;
+                    font-variant: all-small-caps;
+                    height: 12vh;
+                    width:13vw;
+                    padding-top: 3vh;
+                    margin: 0;
+                    transition: 1s all ease;
+                    border-bottom:3px solid $GaiaDarkGreen;
+                }
+                
+                ul{
+                    color: $GaiaDarkGreen;
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    width:100%;
+                    li{
+                        width:100%;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        margin: 2.5vw 0;
+                        
+                        p{
+                        text-align: center;
+                        color:$GaiaGrey;
+                        font-family: 'Roboto';
+                        font-weight: 300;
+                        font-size: 1.2vw;
+                        width:50%;
+                        }
+
+                        a{
+                        text-decoration: none;
+                        background-color: $GaiaLightGreen;
+                        color: $GaiaDarkGreen;
+                        width:20vw;
+                        font-family: 'Roboto';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 1.2vw;
+                        margin: 0 0 0 1vw;
+                        transition: 0.4s all ease;
+                        border-radius: 44.9876px;
+                        text-align: center;
+                        padding:1vw;
+                        }
+
+                        a:hover{
+                        box-shadow: 0 0.1em 0.5em 0.1em $GaiaDarkGreen;
+                        }
+    
+                        h3{
+                        color: $GaiaDarkGreen;
+                        font-family: "Roboto";
+                        font-weight: 600;
+                        font-size: 1.8vw;
+                        text-align: center;
+                        font-variant: all-small-caps;
+                        width:80%;
+                        }
+                    }
+                }
+                    
+            }
+            #aboutpg-item4{
+                display: grid;
+                grid-template-columns:1fr;
+                justify-items: center;
+                margin-top:1vw;
+                h2{
+                    color: $GaiaDarkGreen;
+                    font-family: "Roboto";
+                    font-weight: 900;
+                    font-size: 3vw;
+                    text-align: center;
+                    font-variant: all-small-caps;
+                    height: 12vh;
+                    width:90%;
+                    padding-top: 3vh;
+                    margin: 0;
+                    transition: 1s all ease;
+                    border-bottom:3px solid $GaiaDarkGreen;
+                }
+                ul{
+                    display: grid;
+                    grid-template-columns:1fr 1fr;
+                    width:80%;
+
+                    li{
+                        display:grid;
+                        align-items: start;
+                        justify-items: center;
+                        transition: 1s all ease;
+                        padding:10%;
+                        background-color: white;
+                        box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+                        margin:.5vw;
+                        img{
+                            width: 50%;
+                        }
+                        p{
+                            text-align: left;
+                            color:$GaiaGrey;
+                            font-family: 'Roboto';
+                            font-weight: 300;
+                            font-size: 1vw;
+                            line-height: 140%; 
+                            width:75%;
+                            margin:0;
+                        }
+                        h4{
+                            color: $GaiaDarkGreen;
+                            font-family: "Roboto";
+                            font-weight: 900;
+                            font-size: 1.25vw;
+                            text-align: left;
+                            font-variant: all-small-caps;
+                            width:75%;
+                            padding-bottom: 1vh;
+                            }
+                    }
+                    
+                }
         }
         }
     }
